Fixed so that names and titles don't overflow page in /edit

--- a/src/scss/edit.scss
+++ b/src/scss/edit.scss
@@ -256,6 +256,7 @@ body {
     border-radius: 0;
     float: right;
 
+    width: 200px;
     border: none;
     font-family: $font;
     font-size: 16px;
